# tongsuo-python-sdk

./: .gitignore  CHANGES.md  LICENSE  MANIFEST.in  README.md  ci-constraints-requirements.txt  dev-requirements.txt  noxfile.py  pyproject.toml  release.py  setup.cfg  setup.py  tox.ini
.github/actions/upload-coverage/: action.yml
.github/requirements/: build-requirements.in  build-requirements.txt  publish-requirements.txt
.github/workflows/: build-docker-images.yml  ci.yml  pypi-publish.yml  release-wheel.yml  wheel-builder.yml
demos/: sm2_encrypt_decrypt.py  sm2_encrypt_decrypt_from_pem.py  sm2_sign.py  sm2_sign_verify.py  sm2_verify.py  sm3.py  sm4_cbc.py  sm4_cbc_padding.py  sm4_ecb.py  sm4_gcm.py
infra/: Dockerfile
src/_cffi/: build_tongsuo.py  utils.py
src/_cffi/tongsuo/: asn1.py  bignum.py  bio.py  callbacks.py  cmac.py  crypto.py  cryptography.py  dh.py  dsa.py  ec.py  ecdsa.py  engine.py  err.py  evp.py  fips.py  hmac.py  nid.py  objects.py  opensslv.py  pem.py  pkcs12.py  pkcs7.py  provider.py  rand.py  rsa.py  ssl.py  x509.py  x509_vfy.py  x509name.py  x509v3.py
src/tongsuopy/: __about__.py  __init__.py
src/tongsuopy/backends/: _tongsuo.pyi
src/tongsuopy/backends/tongsuo/: __init__.py  _conditional.py  aead.py  backend.py  binding.py  ciphers.py  ec.py  hashes.py  utils.py
src/tongsuopy/crypto/: _serialization.py  cipheralgorithm.py  exceptions.py  hashes.py  hmac.py  utils.py
src/tongsuopy/crypto/asymciphers/: __init__.py  dh.py  ec.py  types.py  utils.py
src/tongsuopy/crypto/ciphers/: __init__.py  aead.py  algorithms.py  base.py  modes.py
src/tongsuopy/crypto/serialization/: __init__.py  base.py
tests/: __init__.py  conftest.py  doubles.py  utils.py
tests/crypto/: test_aead.py  test_sm2.py  test_sm3.py  test_sm4.py  test_sm4_gcm.py  utils.py
tests/vectors/asymciphers/DER_Serialization/: sm2_private_key.der  sm2_public_key.der
tests/vectors/asymciphers/PEM_Serialization/: sm2_private_key.pem  sm2_public_key.pem
tests/vectors/asymciphers/PKCS8/: sm2_private_key.pem
tests/vectors/asymciphers/SM2/: compressed_points.txt
tests/vectors/asymciphers/SM2/Decrypt/: DecryptGen.txt
tests/vectors/asymciphers/SM2/GB_32918.5-2017/: KeyPair.rsp  SigFail.txt  SigGen.txt
tests/vectors/ciphers/SM4/: rfc8998-sm4-ccm.txt  rfc8998-sm4-gcm.txt
tests/vectors/hashes/SM3/: draft-shen-sm2-ecdsa-02.txt
