[metadata]
name = tongsuopy
version = attr: tongsuopy.__version__
description = Tongsuo Python SDK
license = Apache-2.0
url = https://github.com/Tongsuo-Project/tongsuo-python-sdk
author = The Tongsuo Project Authors
author_email = dongbeiouba@gmail.com
project_urls =
    Documentation=https://www.yuque.com/tsdoc/ts
    Source=https://github.com/Tongsuo-Project/tongsuo-python-sdk
    Issues=https://github.com/Tongsuo-Project/tongsuo-python-sdk/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Security :: Cryptography

[options]
python_requires = >=3.6
include_package_data = True
zip_safe = False
package_dir =
    =src
packages = find:
# `install_requires` must be kept in sync with `pyproject.toml`
install_requires =
    cffi >=1.12

[options.packages.find]
where = src
exclude =
    _cffi
    _cffi.*

[options.extras_require]
test =
    pytest>=6.2.0
    pytest-benchmark
    pytest-cov
    pytest-subtests
    pytest-xdist
pep8test =
    black
    flake8
    flake8-import-order
    pep8-naming

[flake8]
ignore = E203,E211,W503,W504,N818
exclude = .tox,*.egg,.git,_build,.hypothesis,.venv
select = E,W,F,N,I
application-import-names = tongsuopy,tests
